force-app/main/default/objects/sked__Resource_Override__c/sked__Resource_Override__c.object-meta.xml
<CustomObject>
    <label>Resource Override</label>
    <nameField>
        <displayFormat>RO-{000}</displayFormat>
        <label>Resource Override Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>