force-app/main/default/objects/sked__Resource_Override__c/fields/sked__End__c.field-meta.xml
<CustomField>
    <fullName>sked__End__c</fullName>
    <description>End date for when these overrides apply</description>
    <label>End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>