force-app/main/default/objects/sked__Resource_Override__c/fields/sked__GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>sked__GeoLocation__c</fullName>
    <description>Optional geolocation of home address for the duration of the override</description>
    <label>GeoLocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>