force-app/main/default/objects/sked__Resource_Override__c/fields/sked__Home_Address__c.field-meta.xml
<CustomField>
    <fullName>sked__Home_Address__c</fullName>
    <description>Optional home address for the duration of the override</description>
    <label>Home Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>