force-app/main/default/objects/sked__Resource_Override__c/fields/sked__Resource__c.field-meta.xml
<CustomField>
    <fullName>sked__Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipLabel>Resource Overrides</relationshipLabel>
    <relationshipName>Resource_Overrides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>