force-app/main/default/objects/sked__Resource_Override__c/fields/sked__Start__c.field-meta.xml
<CustomField>
    <fullName>sked__Start__c</fullName>
    <description>Start date for when these overrides apply</description>
    <label>Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>