force-app/main/default/objects/sked__Resource_Override__c/fields/sked_End_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_End_Time__c</fullName>
    <label>End Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>