force-app/main/default/objects/sked__Resource_Override__c/fields/sked_Is_Travel_Required__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Travel_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Travel Required?</label>
    <type>Checkbox</type>
</CustomField>