force-app/main/default/objects/sked__Resource_Override__c/fields/sked_Travel_To_Start__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_To_Start__c</fullName>
    <label>Travel To Start</label>
    <type>DateTime</type>
</CustomField>