force-app/main/default/objects/sked__Resource_Override__c/fields/sked_Travel_To_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_To_Start_Date__c</fullName>
    <label>Travel To Start Date</label>
    <type>Date</type>
</CustomField>